# vk-engine

./: .gitignore  CMakeLists.txt  vcpkg.json
app/: CMakeLists.txt  main.cpp
assets/shaders/: build_occ_l1.comp  fs_lighting.frag  fs_present.frag  fs_raycast.frag  pp_raycast.comp  procgen_voxels.comp  tex.frag  tex.vert  tri.frag  tri.vert  vs_fullscreen.vert
engine/: CMakeLists.txt
engine/include/engine/: brick_manager.hpp  camera.hpp  config.hpp  engine.hpp  log.hpp  render_loop.hpp  resource_setup.hpp  vk_checks.hpp
engine/include/engine/gfx/: memory.hpp  present_pipeline.hpp  ray_pipeline.hpp  unique_handles.hpp  utils.hpp  vulkan_commands.hpp  vulkan_device.hpp  vulkan_instance.hpp  vulkan_pipeline.hpp  vulkan_surface.hpp  vulkan_swapchain.hpp
engine/include/engine/platform/: window.hpp
engine/src/: brick_manager.cpp  camera.cpp  engine.cpp  render_loop.cpp  resource_setup.cpp
engine/src/core/: log.cpp  vk_checks.cpp
engine/src/gfx/: memory.cpp  present_pipeline.cpp  ray_pipeline.cpp  utils.cpp  vulkan_commands.cpp  vulkan_device.cpp  vulkan_instance.cpp  vulkan_pipeline.cpp  vulkan_surface.cpp  vulkan_swapchain.cpp
engine/src/platform/: glfw_context.cpp  glfw_context.hpp  glfw_window.cpp
